Refactoring request and response message

--- a/config/local_config.yaml
+++ b/config/local_config.yaml
@@ -24,5 +24,5 @@ server_auth:
   timeout:      4s
   idle_timeout: 30s
   secret:       "secret" # серкрет для токена
-  token_ttl:     1h # время для токена
+  token_ttl:     20s # время для токена 1h потом поставить
   id_api:       1
